--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,42 +1,646 @@
-.App {
-  text-align: center;
+body {
+  height: 100%;
+  margin: 0;
+  background-color: #fff;
+  height: 100vh;
+  display: block;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+main {
+  display: grid;
+  grid-template-rows: 8rem auto 2rem;
+  grid-template-areas: 'header' 'section' 'footer';
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* HEADER */
+header {
+  border: none;
+  position: sticky;
+  top: 0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 15px;
+  margin-bottom: 15px;
+  background-color: #ffd8d8;
+  z-index: 200;
+}
+.title {
+  font-size: 50px;
+  -webkit-text-stroke: 2px #b993d6;
+}
+.useremail {
+  position: relative;
+  font-weight: bold;
+  color: #b993d6;
 }
 
-.App-link {
-  color: #61dafb;
+.publicationlist {
+  padding: 100px;
+  list-style: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: normal;
+  align-content: flex-start;
 }
 
+.flex-items:nth-child(1) {
+  display: block;
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: auto;
+  align-self: auto;
+  order: 0;
+}
+
+.flex-items:nth-child(2) {
+  display: block;
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: auto;
+  align-self: auto;
+  order: -1;
+}
+
+.flex-items:nth-child(3) {
+  display: block;
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: auto;
+  align-self: auto;
+  order: 0;
+}
+
+h1 {
+  color: black;
+}
+
+a:link,
+a:visited,
+a:active {
+  text-decoration: none;
+  color: #fff;
+}
+
+/* LIKE */
+.like {
+  background: url(digHeart_corazón.svg.png) no-repeat;
+  max-width: 30px;
+  max-height: 30px;
+  background-size: cover;
+  cursor: pointer;
+  border: none;
+  width: 100px;
+  height: 100px;
+  margin: 20px;
+  display: block;
+}
 .liked {
-  background-color: red;
+  background: url(Heart_corazón.svg.png) no-repeat;
+  max-width: 30px;
+  max-height: 30px;
+  background-size: cover;
+  cursor: pointer;
+  border: none;
+  width: 100px;
+  height: 100px;
+  margin: 20px;
+  display: block;
+}
+#nheart {
+  display: inline;
+  position: absolute;
+  color: #fff;
+  bottom: 10px;
+}
+
+/* SEARCHBAR */
+.box {
+  position: relative;
+}
+
+.input {
+  text-align: center;
+  width: 210px;
+  height: 70px;
+  color: #fff;
+  background: none;
+  border-radius: 50px;
+  box-shadow: 0 5px 20px #ff7c7c, 0 0 0 10px #ffd8d8;
+  box-sizing: border-box;
+  font-size: 16px;
+  background: -webkit-linear-gradient(#ff7575, #b993d6);
+  background: linear-gradient(#ff7575, #b993d6);
+  opacity: 0.85;
+  filter: alpha(opacity=85);
+  outline: none;
+}
+
+input:-webkit-autofill {
+  -webkit-text-fill-color: #b993d6;
+  font-weight: bold;
+}
+
+.box i {
+  position: absolute;
+  top: 50%;
+  right: 15px;
+  font-size: 26px;
+  color: #ff7c7c;
+}
+.box:hover i {
+  opacity: 0;
+  z-index: -1;
+}
+
+/* REGISTRO */
+input {
+  border: none;
+}
+
+button:focus {
+  outline: none;
+}
+
+::-webkit-input-placeholder {
+  color: rgba(255, 255, 255);
+}
+
+::-webkit-input-placeholder .input-line:focus + ::input-placeholder {
+  color: #fff;
+}
+
+.input-line:focus {
+  outline: none;
+  border-color: #fff;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+
+.ghost-round {
+  cursor: pointer;
+  background: none;
+  border: 1px solid rgba(255, 255, 255, 0.65);
+  border-radius: 25px;
+  color: rgba(255, 255, 255, 0.65);
+  -webkit-align-self: flex-end;
+  -ms-flex-item-align: end;
+  align-self: flex-end;
+  font-size: 19px;
+  font-size: 1.2rem;
+  font-weight: 300;
+  line-height: 2.5em;
+  margin-top: auto;
+  margin-bottom: 25px;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+
+.ghost-round:hover {
+  background: rgba(255, 255, 255, 0.15);
+  color: #fff;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+
+.input-line {
+  background: none;
+  margin-bottom: 20px;
+  margin-top: 10px;
+  line-height: 2.4em;
+  color: #fff;
+  font-weight: 300;
+  letter-spacing: 0px;
+  letter-spacing: 0.02rem;
+  font-size: 19px;
+  font-size: 1.2rem;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.65);
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+  padding-bottom: 5px;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.input-fields {
+  margin-top: 25px;
+}
+
+.container {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.content {
+  padding-left: 25px;
+  padding-right: 25px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column;
+  z-index: 5;
+}
+
+.welcome {
+  font-weight: 200;
+  margin-top: 30px;
+  text-align: center;
+  font-size: 40px;
+  font-size: 2.5rem;
+  letter-spacing: 0px;
+  letter-spacing: 0.05rem;
+}
+
+.missyou {
+  font-weight: 200;
+  margin-top: 30px;
+  text-align: center;
+  font-size: 20px;
+  font-size: 1.8rem;
+  letter-spacing: 0px;
+  letter-spacing: 0.05rem;
+  margin-bottom: 30px;
+}
+
+.subtitle {
+  text-align: center;
+  line-height: 1em;
+  font-weight: 100;
+  letter-spacing: 0px;
+  letter-spacing: 0.02rem;
+}
+
+.menu {
+  background: rgba(0, 0, 0, 0.2);
+  width: 100%;
+  height: 50px;
+}
+
+.window {
+  z-index: 100;
+  color: #fff;
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column;
+  box-shadow: 0 5px 20px #ff7c7c, 0 0 0 10px;
+  box-sizing: border-box;
+  height: 100%;
+  width: 360px;
+  background: #fff;
+  border-radius: 10px;
+}
+
+.overlay {
+  border-radius: 10px;
+  background: -webkit-linear-gradient(#ff7575, #b993d6);
+  background: linear-gradient(#ff7575, #b993d6);
+  opacity: 0.85;
+  filter: alpha(opacity=85);
+  height: 100%;
+  position: absolute;
+  width: 360px;
+  z-index: 1;
+}
+
+.window2 {
+  z-index: 100;
+  color: #fff;
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column;
+  box-shadow: 0 5px 20px #ff7c7c, 0 0 0 10px;
+  box-sizing: border-box;
+  height: 100%;
+  width: 70vw;
+  background: #fff;
+  border-radius: 10px;
+}
+
+.overlay2 {
+  border-radius: 10px;
+  background: -webkit-linear-gradient(#ff7575, #b993d6);
+  background: linear-gradient(#ff7575, #b993d6);
+  opacity: 0.85;
+  filter: alpha(opacity=85);
+  height: 100%;
+  position: absolute;
+  width: 70vw;
+  z-index: 1;
+}
+
+.bold-line {
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  margin: auto;
+  height: 360px;
+  z-index: 1;
+  opacity: 0.1;
+}
+
+@media (max-width: 500px) {
+  .window {
+    width: 100%;
+    height: 100%;
+  }
+  .overlay {
+    width: 100%;
+    height: 100%;
+  }
+}
+.buttonpublication {
+  position: relative;
+  margin: auto;
+  border-radius: 50px;
+  background: -webkit-linear-gradient(#ff7575, #b993d6);
+  background: linear-gradient(#ff7575, #b993d6);
+  border: none;
+  text-align: center;
+  width: 50vw;
+  height: 70px;
+  box-shadow: 0 5px 20px #ff7c7c, 0 0 0 1px;
+  box-sizing: border-box;
+  font-weight: 200;
+  text-align: center;
+  font-size: 20px;
+  font-size: 1.7rem;
+  letter-spacing: 0px;
+  letter-spacing: 0.05rem;
+  color: #fff;
+  opacity: 0.85;
+  filter: alpha(opacity=85);
+  cursor: pointer;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  top: 90px;
+}
+
+.window3 {
+  z-index: 100;
+  color: #fff;
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column;
+  box-shadow: 0 5px 20px #ff7c7c, 0 0 0 10px;
+  box-sizing: border-box;
+  height: 100%;
+  width: 70vw;
+  background: #fff;
+  border-radius: 10px;
+}
+
+.overlay3 {
+  border-radius: 10px;
+  background: -webkit-linear-gradient(#ff7575, #b993d6);
+  background: linear-gradient(#ff7575, #b993d6);
+  opacity: 0.85;
+  filter: alpha(opacity=85);
+  height: 100%;
+  position: absolute;
+  width: 70vw;
+  z-index: 1;
+}
+
+.photo {
+  max-width: 300px;
+  max-height: 300px;
+  margin: 10px;
+  border: #fff 3px solid;
+}
+
+.category {
+  display: none;
+  font-weight: 480;
+  color: #fff;
+  letter-spacing: 0px;
+  letter-spacing: 0.02rem;
+  font-size: 19px;
+  font-size: 1.2rem;
+}
+.window4 {
+  z-index: 100;
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column;
+  box-shadow: 0 5px 20px #ff7c7c, 0 0 0 10px #fff;
+  box-sizing: border-box;
+  width: 70vw;
+  height: 100%;
+  background: #fff;
+  border-radius: 10px;
+  margin-bottom: 30px;
+}
+
+.overlay4 {
+  border-radius: 10px;
+  background: -webkit-linear-gradient(#ff7575, #b993d6);
+  background: linear-gradient(#ff7575, #b993d6);
+  opacity: 0.85;
+  filter: alpha(opacity=85);
+  position: absolute;
+  height: 100%;
+  width: 70vw;
+  z-index: 1;
+  margin-bottom: 30px;
+}
+
+.closesesion {
+  margin: auto;
+  border-radius: 50px;
+  background: -webkit-linear-gradient(#ff7575, #b993d6);
+  background: linear-gradient(#ff7575, #b993d6);
+  border: none;
+  width: 80px;
+  height: 50px;
+  box-shadow: 0 5px 20px #ff7c7c, 0 0 0 1px #ffd8d8;
+  box-sizing: border-box;
+  font-weight: 200;
+  font-size: 15px;
+  letter-spacing: 0px;
+  letter-spacing: 0.05rem;
+  color: #fff;
+  opacity: 0.85;
+  filter: alpha(opacity=85);
+  cursor: pointer;
+  top: 20px;
+  margin-left: 10px;
+}
+#buscar {
+  display: none;
+}
+
+#photo {
+  border-radius: 50px;
+  background: #fff;
+  border: none;
+  height: 50px;
+  box-shadow: 0 5px 20px #ff7c7c, 0 0 0 1px #ffd8d8;
+  font-weight: bolder;
+  font-size: 1.2rem;
+  letter-spacing: 0px;
+  letter-spacing: 0.05rem;
+  color: #b993d6;
+  opacity: 0.85;
+  filter: alpha(opacity=85);
+  cursor: pointer;
+  padding: 10px;
+}
+
+.radio input,
+.radio select {
+  appearance: none;
+  -webkit-appearance: none;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.radio {
+  margin-top: 200px;
+  appearance: none;
+  -webkit-appearance: none;
+  border-radius: 50px;
+  background: #fff;
+  border: none;
+  height: 50px;
+  box-shadow: 0 5px 20px #ff7c7c, 0 0 0 1px #ffd8d8;
+  font-weight: bolder;
+  font-size: 1.2rem;
+  letter-spacing: 0px;
+  letter-spacing: 0.05rem;
+  color: #b993d6;
+  opacity: 0.85;
+  filter: alpha(opacity=85);
+  cursor: pointer;
+  padding: 10px;
+  appearance: none;
+  -webkit-appearance: none;
+}
+/* NAV */
+.nav {
+  text-align: center;
+  margin: auto;
+  border-radius: 50px;
+  background: -webkit-linear-gradient(#ff7575, #b993d6);
+  background: linear-gradient(#ff7575, #b993d6);
+  border: none;
+  width: 100px;
+  height: 50px;
+  box-shadow: 0 5px 20px #ff7c7c, 0 0 0 1px #ffd8d8;
+  box-sizing: border-box;
+  font-weight: 200;
+  font-size: 15px;
+  letter-spacing: 0px;
+  letter-spacing: 0.05rem;
+  color: #fff;
+  opacity: 0.85;
+  filter: alpha(opacity=85);
+
+  top: 20px;
+  margin-left: 10px;
+  list-style: none;
+}
+.navText {
+  cursor: pointer;
+  top: 5px;
+  left: -20px;
+  position: relative;
+}
+
+footer {
+  position: fixed;
+  left: 0px;
+  bottom: 0px;
+  height: 30px;
+  width: 100%;
+  background: #b993d6;
+  color: #fff;
+  text-align: center;
+  z-index: 200;
+}
+
+.window5 {
+  z-index: 100;
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column;
+  box-shadow: 0 5px 20px #ff7c7c, 0 0 0 10px #fff;
+  box-sizing: border-box;
+  width: 70vw;
+  height: 100%;
+  color: #fff;
+  background: #fff;
+  text-align: center;
+  font-size: 20px;
+  border-radius: 10px;
+  margin-bottom: 30px;
+  top: 130px;
+}
+
+.overlay5 {
+  border-radius: 10px;
+  background: -webkit-linear-gradient(#ff7575, #b993d6);
+  background: linear-gradient(#ff7575, #b993d6);
+  opacity: 0.85;
+  filter: alpha(opacity=85);
+  position: absolute;
+  height: 100%;
+  width: 70vw;
+  z-index: 1;
+  margin-bottom: 30px;
 }
